
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ close (int) ;

int socket_close(int socket) {

 if(socket < 0) return -1;

 return close(socket) < 0 ? -1 : 0;

}
